Prevent horizontal scrollbar on small screens

--- a/apps/full-site-editing/full-site-editing-plugin/full-site-editing/blocks/post-content/style.scss
+++ b/apps/full-site-editing/full-site-editing-plugin/full-site-editing/blocks/post-content/style.scss
@@ -38,6 +38,10 @@
 // TODO: Replace the magic numbers!
 .post-content-block .block-editor-block-list__layout .block-editor-block-list__block[data-align=full] {
 	@media ( max-width: 768px ) {
+		max-width: 768px;
+		margin-left: 0;
+		margin-right: 0;
+
 		.block-editor-block-mover {
 			left: 60px;
 		}
